[tool.poetry]
name = "mulfactory"
version = "0.1.0"
description = "multiprocessing + sqlite3 workflow frame-work"
authors = ["psyang <12964188+psyang@user.noreply.gitee.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
